--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,14 +8,14 @@ on:
 
   push:
     branches:
-    - master
+    - main
 
 jobs:
   generate:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 20
 
     steps:
       - name: generate snake.svg
